welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:2: error: Missing closing brace `}' assumed here
def isFacingTrail():Boolean = {
^SlugHunting:2: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:20: error: expected class or object definition
def hunt(){
^SlugHunting:26: error: Missing closing brace `}' assumed here
    prendBiscuit()
    ^